20071226 patch: Debian compatibility, fixed security issue with bogus file names
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@204 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+v20071226
+	Debian build files
+	Fixed security issue with doctored file names
+	64 bit compilation fixes
 v20070828
 	Debian build files
 v20070601
